...
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FlowCrypt</string>
    <string name="support_email" translatable="false">human@flowcrypt.com</string>

    <string name="compose">Compose</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_compose_security_email">Compose secure message</string>
    <string name="prompt_compose_standard_email">Compose standard message</string>
    <string name="text_must_not_be_empty">Error: \"%1$s\" must not be empty!</string>
    <string name="send">Send</string>
    <string name="error_email_is_not_valid">Error: invalid email</string>
    <string name="internet_connection_is_not_available">Error: no internet</string>
...
    <string name="settings">Settings</string>
    <string name="backups">Backups</string>
    <string name="contacts">Contacts</string>
    <string name="keys">Keys</string>
    <string name="attester" translatable="false">Attester</string>
    <string name="legal">Legal</string>
    <string name="help">Help</string>
    <string name="licence">Licence</string>
    <string name="sources">Sources</string>
    <string name="the_contact_was_deleted">Contact \"%1$s\" deleted</string>
    <string name="key_already_added">Key already added. To update the existing key please go to «Settings» -> «Keys» -> «Key details».</string>
    <string name="help_feedback_or_question">Help, feedback, question</string>
    <string name="feedback_thank_you_for_trying_message">Thank you for trying %1$s! We\'re here to help.</string>
    <string name="your_message">Your message</string>
    <string name="see_more_backup_options">See more backup options</string>
    <string name="there_are_no_backups_on_this_account"><b>There are no backups on this account</b>\n\n If you lose your device, or it stops working, your encrypted email will be unreadable.</string>
    <string name="email" translatable="false">Email</string>
    <string name="download">Download</string>
...
    <string name="hint_clipboard_is_empty">Your clipboard is empty. Please find your %1$s Key where you are storing it, select the text and copy it. After that, return back to %2$s.</string>
    <string name="file_has_wrong_pgp_structure">The content of your file does not look like a valid PGP %1$s Key.</string>
    <string name="source_has_wrong_pgp_structure">The content which you provided does not look like a valid PGP %1$s Key.</string>
    <string name="key_successfully_imported">Key(s) successfully imported</string>
    <string name="the_key_successfully_imported">Key successfully imported</string>
    <string name="attach_file">Attach file</string>
    <string name="switch_to_standard_email">Switch to standard email</string>
    <string name="switch_to_secure_email">Switch to secure email</string>
    <string name="this_message_will_not_be_encrypted">This message will not be encrypted</string>
    <string name="import_their_public_key">Import their Public Key</string>
    <string name="copy_from_other_contact">Copy from other contact</string>
    <string name="template_remove_recipient">Remove %1$s</string>
    <string name="protect_with_password">Protect with password</string>
    <string name="recipient_does_not_use_pgp">Recipient doesn\'t use PGP</string>
    <string name="reply">Reply</string>
    <string name="import_public_key">Import Public Key</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
...
    <string name="loading_backups">Loading backups</string>
    <string name="submitted_can_receive_encrypted_email">Submitted, can receive encrypted email.</string>
    <string name="no_public_key_recorded">No public key recorded. Your contacts may not know that you are using
        encryption.</string>
    <string name="wrong_public_key_recorded">Wrong public key recorded. Incoming encrypted email may not be readable.</string>
    <string name="use_public_key_from">Use Public key from</string>
    <string name="key_successfully_copied">Key successfully copied</string>
    <string name="search">Search</string>
    <string name="have_not_any_other_key">I don\'t have any other key</string>
    <string name="message_was_encrypted_for_wrong_key">Hello,\n\nI was not able to read your encrypted message because
        it was encrypted for a wrong key.\n\nMy current public key is attached below. Please update your records and
        send me a new encrypted message.\n\nThank you</string>
    <string name="please_select_key">Please select a key</string>
...
