<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuActionAttachFile"
        android:icon="@mipmap/ic_action_attach_file"
        android:title="@string/attach_file"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionSend"
        android:icon="@mipmap/ic_action_send"
        android:title="@string/send"
        app:showAsAction="ifRoom" />
</menu>