...
        <View
            android:id="@+id/viewDivider"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_single_dip"
            android:layout_marginBottom="@dimen/default_margin_content"
            android:background="@color/aluminum"
            app:layout_constraintBottom_toTopOf="@+id/textViewAuthorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUserEmail"
...
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewAuthorHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/i_will_usually_reply_within_an_hour_except_when_i_sleep_tom"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

...
